[package]
name = "sourcemap-explorer"
version = "1.0.0-alpha.3"
edition = "2021"

[[bin]]
name = "smx"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
sourcemap = "*"
termcolor = "1.4.1"
